moved some files around and cleaned up my folder structure before I continued creating new files.

--- a/Examples/unity01/line-square-circle.html
+++ b/Examples/unity01/line-square-circle.html
@@ -8,11 +8,11 @@
 		<meta name="description" content="">
 
 		<link rel="shortcut icon" href="/myicon.png" /> <!-- the safe way to do this -->
-		<link src=“stylesheet.css” rel=“stylesheet” type=“text/css”/>
+		<link src=“ln-cr-sq.css” rel=“stylesheet” type=“text/css”/>
 	</head>
 	<body>
-		<div id="line">
-			<svg>
+		<div id="line-container">
+			<svg id="line">
 				<line x1="0" y1="0" x2="0" y2="100" style="stroke:black"/>
 			</svg>
 		</div>
