moved all the old stuff into the false-start folder. starting over with a better direction

--- a/false-start-1/Examples/unity01/line-square-circle.html
+++ b/false-start-1/Examples/unity01/line-square-circle.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title> This is the page title -- the text that shows up in the tab/window title area</title>
+		<title> Unity 01 -- line square circle</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width initial-scale=1">
 		<meta name="description" content="">
 
 		<link rel="shortcut icon" href="/myicon.png" /> <!-- the safe way to do this -->
-		<link src=“ln-cr-sq.css” rel=“stylesheet” type=“text/css”/>
+		<link rel="stylesheet" href="line-square-circle-margin02.css" type="text/css"/>
 	</head>
 	<body>
 		<div id="line-container">
@@ -17,13 +17,13 @@
 			</svg>
 		</div>
 
-		<div id="square">
-			<svg>
+		<div id="square-container">
+			<svg id="square">
 				<rect width="200" height="200" />
 			</svg>
 		</div>
-		<div id="circle">
-			<svg>
+		<div id="circle-container">
+			<svg id="circle">
 				<circle cx="50" cy="50" r="40" />	
 			</svg>
 		</div>
